--- a/views/home.erb
+++ b/views/home.erb
@@ -7,10 +7,10 @@
 <body>
   <h1>Welcome to Harriet's Dice Roll</h1>
   <div
-    <div><a href="/dice/2/6">2d6</a></div>
-    <div><a href="/dice/2/10">2d10</a></div>
-    <div><a href="/dice/1/20">1d20</a></div>
-    <div><a href="/dice/5/4">4d5</a></div>
+    <div><a href="/dice/2/6">Roll two 6-sided dice</a></div>
+    <div><a href="/dice/2/10">Roll two 10-sided dice</a></div>
+    <div><a href="/dice/1/20">Roll one 20-sided dice</a></div>
+    <div><a href="/dice/5/4">Roll four 5-sided dice</a></div>
   </div>
 
 </body>
