--- a/views/two_ten.erb
+++ b/views/two_ten.erb
@@ -5,9 +5,15 @@
 </head>
 
 <body>
+  <h1>2d6</h1>
 
-  <h1>2d10</h1>
-
-  <p><%= @outcome %></p>
+  <ul>
+  <% @rolls.each do |a_roll| %>
+    <li>
+      <%= a_roll %>
+    </li>
+  <% end %>
+  </ul>
+  <p>The sum is <%= @sum %><p>
 </body>
 </html>
